[tool.poetry]
name = "nicegui-samples"
version = "0.1.0"
description = "Sample projects using NiceGUI and OpenCV"
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
nicegui = "^1.4.6"
opencv-python = "^4.9.0.80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
